# cursed-mav

./: .cursorrules  .gitignore  Cargo.toml  README.md
.cursor/: MCP_SETUP.md  README.md
.cursor/rules/: mcp-sequential-thinking.mdc  project-specific.mdc
.moon/: .gitignore  workspace.yml
.moon/tasks/: rust.yml  tauri.yml  typescript.yml
cmav_bridge/: Cargo.toml
cmav_web/: package.json
cmav_web/src/: App.tsx  index.css
cmav_web/src/components/: dock-dashboard.tsx  dock-panel.tsx  dockview-theme-provider.tsx  header.tsx  mode-toggle.tsx
cmav_web/src/components/panels/: data-panel.tsx  settings-panel.tsx  welcome-panel.tsx
cmav_web/src/lib/: dockview-theme.ts
cmav_web/src/styles/: dockview-theme.css
cursed-mav-tauri/: index.html  moon.yml  package-lock.json  package.json  vite.config.js
cursed-mav-tauri/src/: App.jsx  Connection.jsx  MapView.jsx  MissionPlanner.jsx  Params.jsx  RawLogs.jsx  ThreeDView.jsx  main.jsx
cursed-mav-tauri/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
cursed-mav-tauri/src-tauri/parameters/: ardupilot.xml  ardupilot_small.xml
cursed-mav-tauri/src-tauri/src/: cmd_connect.rs  helpers.rs  lib.rs  main.rs  parameter_meta.rs  state.rs
cursed-mav-tauri/src/data/: message.ts  ws.singleton.ts
cursed-mav-tauri/src/hooks/: useArdupilotValue.ts
cursed-mav-tauri/src/mission/: CommandSelector.jsx  MissionPlanner.jsx
cursed-mav-tauri/src/mission/commands/: ChangeSpeedCommand.jsx  LandCommand.jsx  (+6 more)
cursed-mav-tauri/src/state/: drone.ts
notes/: panel-architecture.md
src/: Params.jsx  main.rs
