[package]
name = "cmav_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
log = "0.4.27"
mavlink = "0.14.1"
pretty_env_logger = "0.5.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
