[package]
name = "cursed-mav-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "cursed_mav_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43.0", features = ["full"] }
mavlink = "0.13.1"
anyhow = "1.0.95"
log = "0.4.25"
tauri-plugin-log = "2"
quick-xml = { version = "0.31.0", features = ["serialize"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
